Rewrite and ready for alpha test

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -65,6 +65,7 @@ input_signal_select=Select the signal to filter into the variable
 input_variable_select=Set the name of the variable
 output_signal_select=Select the signal to output the variable as
 output_variable_select=Set the name of the variable to send out
+variable_variable_select=Set the name of the variable
 
 [plc_command_tooltip]
 NO-OP=Do nothing
